--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,5 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
+URL: https://github.com/kjhealy/kjhnet
+BugReports: https://github.com/kjhealy/kjhnet/issues
