--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: kjhnet
 Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Version: 0.0.1.9000
 Authors@R: 
     person(given = "Kieran",
            family = "Healy",
@@ -11,6 +11,8 @@ Description: What the package does (one paragraph).
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.1
-URL: https://github.com/kjhealy/kjhnet
+RoxygenNote: 7.3.1
+URL: https://github.com/kjhealy/kjhnet, https://kjhealy.github.io/kjhnet/
 BugReports: https://github.com/kjhealy/kjhnet/issues
+Depends: 
+    R (>= 3.50)
